# KINPO

./: AboutCatalogs.txt  CMakeLists.txt  Header.h  README.md  build.sh  cleanup.sh  input.txt  main  main.cpp  output.txt  test  test.cpp  toolchain.cmake
Documents/: ПрИн-266. ГвоздковСА. Внешняя спецификация.docx  ПрИн-266. ГвоздковСА. Внутренняя спецификация.docx  ПрИн-266. ГвоздковСА. Методика тестирования функций.docx
Doxygen/: Doxyfile  _header_8h.html  _header_8h_source.html  annotated.html  classes.html  dir_0074fa7760ca68efbc859127b9fae46c.html  dir_9e73b9eb0d55618f600dbb52a0038a9f.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  index.html  main_8cpp.html  menudata.js  struct_error_info-members.html  struct_error_info.html
Doxygen/search/: all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  enums_0.js  enumvalues_1.js  enumvalues_3.js  enumvalues_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  pages_1.js  searchdata.js  (+2 more)
Executable/: README.txt
Tests/: AboutBatFiles.txt  start.bat
TheCalculationOfWaterVolumeBetweenWalls/: build.sh  copy_exe_to_executable_folder.sh
TheCalculationOfWaterVolumeBetweenWalls/test/: CMakeLists.txt  CalculateWaterVolumeTest.cpp  DrawWallSchemaTest.cpp  funcs.cpp  funcs.h
src/: Header.h  input.txt  main.cpp  output.txt
test/: CalculateWaterVolumeTest.cpp  DrawWallSchemaTest.cpp  GetFileExtensionTest.cpp  funcs.cpp  funcs.h
tests/: start.bat
(+7 files in other folders)
